fixed text/button alignment on homepage

--- a/app/assets/stylesheets/global.css.sass
+++ b/app/assets/stylesheets/global.css.sass
@@ -51,7 +51,7 @@ $dark-color: $dark-orange
     line-height: 90px
     margin-bottom: 50px
   .home-submit
-    margin-left: 20px
+    margin: 20px 0px 20px 100px
     text-transform: uppercase
     padding: 14px 54px
     font-size: 17px
