--- a/app/assets/stylesheets/static.css.sass
+++ b/app/assets/stylesheets/static.css.sass
@@ -9,4 +9,4 @@
 .next-to-free
   margin-left: 10px
 .feature-list
-  margin: 30px 0px 30px 10px
+  margin: 30px 0px 30px 0px
